--- a/app.json
+++ b/app.json
@@ -25,7 +25,7 @@
       {
         "selectedIconPath": "images/mine-selected.png",
         "iconPath": "images/mine.png",
-        "pagePath": "pages/logs/logs",
+        "pagePath": "pages/Login/Login",
         "text": "我的"
       }
     ]
