Add new pages and HTTP module(Issue #6 #7 #8)     完成HTTP模块     后期工作为向其中添加页面的相关逻辑

--- a/app.json
+++ b/app.json
@@ -3,7 +3,9 @@
         "pages/index/index",
         "pages/logs/logs",
         "pages/Login/Login",
-        "pages/Login_success/Login_success"
+        "pages/Login_success/Login_success",
+        "pages/Sponsor-View/Sponsor",
+        "pages/Personnel-arrangement/Personnel-arr"
     ],
     "window": {
         "backgroundTextStyle": "light",
@@ -26,7 +28,7 @@
             {
                 "selectedIconPath": "images/mine-selected.png",
                 "iconPath": "images/mine.png",
-                "pagePath": "pages/logs/logs",
+                "pagePath": "pages/Personnel-arrangement/Personnel-arr",
                 "text": "我的"
             }
         ]
